--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "schisma",
-  "version": "0.7.5",
+  "version": "0.7.6",
   "description": "Schema validator, conformer, and object creator",
   "main": "dist/schisma.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "creator"
   ],
   "author": "Ketchetwahmeegwun T. Southall <kettek1@kettek.net> (https://kettek.net)",
-  "license": "LGPL-3.0",
+  "license": "MPL-2.0",
   "devDependencies": {
     "ava": "^3.8.2",
     "rollup": "^1.20.3"
